--- a/website/package.json
+++ b/website/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "postbuild": "next-sitemap --config next-sitemap.config.js",
     "lint": "next lint"
   },
   "author": "Fun117 <fun117.kun@gmail.com> (https://fun117.dev)",
@@ -23,6 +24,7 @@
     "@vercel/analytics": "^1.2.2",
     "lucide-react": "^0.378.0",
     "next": "^14.2.3",
+    "next-sitemap": "^4.2.3",
     "nextra": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
     "react": "^18.3.1",
